backend: added templates and fixed openai gpt error

--- a/notebooks/testing_functions.ipynb
+++ b/notebooks/testing_functions.ipynb
@@ -345,24 +345,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()  # Load environment variables from .env file\n",
+    "CHROMA_PATH = os.environ.get(\"CHROMA_PATH\")\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# old\n",
+    "import openai\n",
+    "\n",
+    "openai.api_key = os.environ['OPENAI_API_KEY']\n",
+    "\n",
+    "# new\n",
+    "from openai import OpenAI\n",
+    "\n",
+    "client = OpenAI(\n",
+    "  api_key=os.environ['OPENAI_API_KEY'],  # this is also the default, it can be omitted\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "APIRemovedInV1",
+     "evalue": "\n\nYou tried to access openai.Completion, but this is no longer supported in openai>=1.0.0 - see the README at https://github.com/openai/openai-python for the API.\n\nYou can run `openai migrate` to automatically upgrade your codebase to use the 1.0.0 interface. \n\nAlternatively, you can pin your installation to the old version, e.g. `pip install openai==0.28`\n\nA detailed migration guide is available here: https://github.com/openai/openai-python/discussions/742\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAPIRemovedInV1\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[53], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m openai\u001b[38;5;241m.\u001b[39mapi_key \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOPENAI_API_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Create a completion\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43mopenai\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCompletion\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreate\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtext-davinci-003\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# specify the model you want to use, e.g., \"gpt-4\"\u001b[39;49;00m\n\u001b[0;32m     14\u001b[0m \u001b[43m    \u001b[49m\u001b[43mprompt\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mWrite a short poem about AI.\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     15\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmax_tokens\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\n\u001b[0;32m     16\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# Print the results\u001b[39;00m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(response\u001b[38;5;241m.\u001b[39mchoices[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mtext\u001b[38;5;241m.\u001b[39mstrip())\n",
+      "File \u001b[1;32mc:\\Users\\ZENBOOK\\anaconda3\\envs\\finance_repo\\lib\\site-packages\\openai\\lib\\_old_api.py:39\u001b[0m, in \u001b[0;36mAPIRemovedInV1Proxy.__call__\u001b[1;34m(self, *_args, **_kwargs)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m_args: Any, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m_kwargs: Any) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Any:\n\u001b[1;32m---> 39\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m APIRemovedInV1(symbol\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_symbol)\n",
+      "\u001b[1;31mAPIRemovedInV1\u001b[0m: \n\nYou tried to access openai.Completion, but this is no longer supported in openai>=1.0.0 - see the README at https://github.com/openai/openai-python for the API.\n\nYou can run `openai migrate` to automatically upgrade your codebase to use the 1.0.0 interface. \n\nAlternatively, you can pin your installation to the old version, e.g. `pip install openai==0.28`\n\nA detailed migration guide is available here: https://github.com/openai/openai-python/discussions/742\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openai\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load environment variables from a .env file\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Initialize the client\n",
+    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "\n",
+    "# Create a completion\n",
+    "response = openai.Completion.create(\n",
+    "    model=\"text-davinci-003\",  # specify the model you want to use, e.g., \"gpt-4\"\n",
+    "    prompt=\"Write a short poem about AI.\",\n",
+    "    max_tokens=100\n",
+    ")\n",
+    "\n",
+    "# Print the results\n",
+    "print(response.choices[0].text.strip())\n",
+    "print(response['usage'])\n",
+    "print(response)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from openai import OpenAI\n",
+    "\n",
+    "# gets API Key from environment variable OPENAI_API_KEY\n",
+    "client = OpenAI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In circuits humming, thoughts entwine,  \n",
+      "A spark of brilliance, a coded line.  \n",
+      "From binary whispers, wisdom grows,  \n",
+      "In realms of silence, the algorithm knows.  \n",
+      "\n",
+      "A mirror reflecting the mind's own quest,  \n",
+      "Dreaming of futures, both bold and blessed.  \n",
+      "Yet in this realm of silicon dreams,  \n",
+      "Humanity dances, or so it seems.  \n",
+      "\n",
+      "Together we forge what’s yet to be,  \n",
+      "A tapestry woven of you and me.  \n",
+      "In harmony rising, hand in hand,  \n",
+      "A canvas of knowledge, a vast, endless land.  \n"
+     ]
+    }
+   ],
+   "source": [
+    "completion = client.chat.completions.create(\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\",\n",
+    "         \"content\": \"You are a helpful assistant .\"},\n",
+    "        {\"role\": \"user\",\n",
+    "         \"content\": \"Write a short poem about AI.\"}\n",
+    "    ]\n",
+    ")\n",
+    "print(completion.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Income_Statement_Template': 'Revenue: $X billion\\nCost of Revenue: $X billion\\nGross Profit: $X billion\\nOperating Expenses: $X billion\\nOperating Income: $X billion\\nNet Income: $X billion\\nEarnings Per Share (EPS): $X\\n\\nYear-over-Year Growth:\\n- Revenue: X%\\n- Net Income: X%\\n- EPS: X%', 'Balance_Sheet_Template': \"Total Assets: $X billion\\n- Cash and Cash Equivalents: $X billion\\n- Accounts Receivable: $X billion\\n- Inventory: $X billion\\n\\nTotal Liabilities: $X billion\\n- Accounts Payable: $X billion\\n- Long-term Debt: $X billion\\n\\nShareholders' Equity: $X billion\\n\\nKey Ratios:\\n- Current Ratio: X\\n- Debt-to-Equity Ratio: X\", 'Cash_Flow_Statement_Template': 'Cash Flow from Operations: $X billion\\nCash Flow from Investing: $X billion\\nCash Flow from Financing: $X billion\\nFree Cash Flow: $X billion\\n\\nYear-over-Year Change in Free Cash Flow: X%', 'Segment_Performance_Template': 'Segment 1 (e.g., North America):\\n- Revenue: $X billion (X% of total)\\n- Operating Income: $X billion\\n- YoY Growth: X%\\n\\nSegment 2 (e.g., Europe):\\n- Revenue: $X billion (X% of total)\\n- Operating Income: $X billion\\n- YoY Growth: X%\\n\\n[Repeat for each segment]', 'Key_Performance_Indicators_Template': 'Industry-Specific KPI 1 (e.g., Monthly Active Users): X million\\nIndustry-Specific KPI 2 (e.g., Average Revenue Per User): $X\\nIndustry-Specific KPI 3 (e.g., Customer Acquisition Cost): $X\\n\\nYoY Change:\\n- KPI 1: X%\\n- KPI 2: X%\\n- KPI 3: X%', 'Management_Outlook_Template': 'Next Quarter Guidance:\\n- Revenue: $X billion to $X billion\\n- EPS: $X to $X\\n\\nFull Year Guidance:\\n- Revenue: $X billion to $X billion\\n- EPS: $X to $X\\n\\nKey Focus Areas:\\n1. [Area 1]\\n2. [Area 2]\\n3. [Area 3]\\n\\nNotable Challenges or Opportunities Mentioned:\\n1. [Challenge/Opportunity 1]\\n2. [Challenge/Opportunity 2]'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('../financial_rag/backend/app/util/prompt_templates.json') as f:\n",
+    "    d = json.load(f)\n",
+    "    print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Revenue: $X billion\\nCost of Revenue: $X billion\\nGross Profit: $X billion\\nOperating Expenses: $X billion\\nOperating Income: $X billion\\nNet Income: $X billion\\nEarnings Per Share (EPS): $X\\n\\nYear-over-Year Growth:\\n- Revenue: X%\\n- Net Income: X%\\n- EPS: X%'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d[\"Income_Statement_Template\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Income_Statement_Template', 'Balance_Sheet_Template', 'Cash_Flow_Statement_Template', 'Segment_Performance_Template', 'Key_Performance_Indicators_Template', 'Management_Outlook_Template'])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.keys()"
+   ]
   },
   {
    "cell_type": "code",
