--- a/notebooks/testing_functions.ipynb
+++ b/notebooks/testing_functions.ipynb
@@ -821,91 +821,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[82], line 104\u001b[0m\n\u001b[0;32m    102\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m    103\u001b[0m     logging\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStarting the automated financial report scraper\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 104\u001b[0m     \u001b[43mrun_quarterly\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[82], line 100\u001b[0m, in \u001b[0;36mrun_quarterly\u001b[1;34m()\u001b[0m\n\u001b[0;32m     98\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     99\u001b[0m     schedule\u001b[38;5;241m.\u001b[39mrun_pending()\n\u001b[1;32m--> 100\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "import schedule\n",
-    "import time\n",
     "import logging\n",
     "from datetime import datetime\n",
-    "import random\n",
     "\n",
     "# Set up logging\n",
-    "logging.basicConfig(filename='financial_report_scraper.log', level=logging.INFO,\n",
+    "logging.basicConfig(filename='financial_report_downloader.log', level=logging.INFO,\n",
     "                    format='%(asctime)s - %(levelname)s - %(message)s')\n",
     "\n",
     "# Define the companies, their sectors, and the URLs of their financial reports\n",
     "companies = [\n",
-    "    {\"name\": \"Apple\", \"sector\": \"Technology\", \"url\": \"https://investor.apple.com/sec-filings/default.aspx\"},\n",
+    "    {\"name\": \"Apple\", \"sector\": \"Technology\", \"url\": \"https://investor.apple.com/investor-relations/default.aspx\"},\n",
     "    {\"name\": \"Microsoft\", \"sector\": \"Technology\", \"url\": \"https://www.microsoft.com/en-us/Investor/earnings/FY-2023/q4/\"},\n",
-    "    {\"name\": \"Johnson & Johnson\", \"sector\": \"Healthcare\", \"url\": \"https://johnsonandjohnson.gcs-web.com/financial-information/sec-filings\"},\n",
+    "    {\"name\": \"Johnson & Johnson\", \"sector\": \"Healthcare\", \"url\": \"https://www.investor.jnj.com/quarterly-results\"},\n",
     "    {\"name\": \"JPMorgan Chase\", \"sector\": \"Finance\", \"url\": \"https://www.jpmorganchase.com/ir/quarterly-earnings\"},\n",
-    "    {\"name\": \"Walmart\", \"sector\": \"Retail\", \"url\": \"https://corporate.walmart.com/esgreport/reporting-data/sec-filings\"},\n",
-    "]\n",
-    "\n",
-    "# List of user agents to rotate\n",
-    "user_agents = [\n",
-    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36',\n",
-    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Safari/605.1.15',\n",
-    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:89.0) Gecko/20100101 Firefox/89.0'\n",
+    "    {\"name\": \"Walmart\", \"sector\": \"Retail\", \"url\": \"https://corporate.walmart.com/newsroom/financial-reports\"},\n",
     "]\n",
     "\n",
     "def create_folder(path):\n",
     "    if not os.path.exists(path):\n",
     "        os.makedirs(path)\n",
     "\n",
-    "def get_random_user_agent():\n",
-    "    return random.choice(user_agents)\n",
-    "\n",
     "def download_pdf(url, folder_path, filename):\n",
-    "    headers = {'User-Agent': get_random_user_agent()}\n",
     "    try:\n",
-    "        response = requests.get(url, headers=headers, timeout=30)\n",
+    "        response = requests.get(url, timeout=30)\n",
     "        response.raise_for_status()\n",
     "        with open(os.path.join(folder_path, filename), 'wb') as f:\n",
     "            f.write(response.content)\n",
     "        logging.info(f\"Downloaded: {filename}\")\n",
     "    except requests.RequestException as e:\n",
     "        logging.error(f\"Failed to download {filename}: {str(e)}\")\n",
-    "    time.sleep(random.uniform(1, 3))  # Random delay between 1 and 3 seconds\n",
     "\n",
     "def extract_pdf_links(url):\n",
-    "    headers = {'User-Agent': get_random_user_agent()}\n",
     "    try:\n",
-    "        response = requests.get(url, headers=headers, timeout=30)\n",
+    "        response = requests.get(url, timeout=30)\n",
     "        response.raise_for_status()\n",
     "        soup = BeautifulSoup(response.text, 'html.parser')\n",
     "        pdf_links = []\n",
     "        for link in soup.find_all('a'):\n",
     "            href = link.get('href')\n",
-    "            if href and (href.lower().endswith('.pdf') or '10-q' in href.lower() or '10-k' in href.lower()):\n",
+    "            if href and href.lower().endswith('.pdf'):\n",
     "                pdf_links.append(href)\n",
     "        return pdf_links\n",
     "    except requests.RequestException as e:\n",
     "        logging.error(f\"Failed to extract PDF links from {url}: {str(e)}\")\n",
     "        return []\n",
-    "    finally:\n",
-    "        time.sleep(random.uniform(1, 3))  # Random delay between 1 and 3 seconds\n",
     "\n",
-    "def scrape_financial_reports():\n",
-    "    logging.info(\"Starting quarterly financial report scraping\")\n",
+    "def main():\n",
     "    base_folder = f\"financial_reports_{datetime.now().strftime('%Y_%m_%d')}\"\n",
     "    create_folder(base_folder)\n",
     "\n",
@@ -925,23 +893,7 @@
     "            filename = link.split('/')[-1]\n",
     "            download_pdf(link, company_folder, filename)\n",
     "\n",
-    "    logging.info(\"Completed quarterly financial report scraping\")\n",
-    "\n",
-    "def run_quarterly():\n",
-    "    def job():\n",
-    "        scrape_financial_reports()\n",
-    "\n",
-    "\n",
-    "    # Run the job immediately\n",
-    "    job()\n",
-    "    \n",
-    "    while True:\n",
-    "        schedule.run_pending()\n",
-    "        time.sleep(1)\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    logging.info(\"Starting the automated financial report scraper\")\n",
-    "    run_quarterly()"
+    "    logging.info(\"Completed downloading financial reports\")\n"
    ]
   },
   {
