feat: pdf scrapping and audio file scrapping

--- a/notebooks/testing_functions.ipynb
+++ b/notebooks/testing_functions.ipynb
@@ -1055,6 +1055,190 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File already exists: KO_1Q24_Earnings_Audio.mp3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import os\n",
+    "import logging\n",
+    "\n",
+    "# Replace logging with print\n",
+    "def custom_print(*args, **kwargs):\n",
+    "    print(*args, **kwargs)  \n",
+    "\n",
+    "# Replace all instances of logging.info and logging.error with custom_print\n",
+    "logging.info = custom_print\n",
+    "logging.error = custom_print\n",
+    "\n",
+    "def download_mp3(url, folder_path, filename):\n",
+    "    try:\n",
+    "        headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'}\n",
+    "        response = requests.get(url, headers=headers, timeout=60)\n",
+    "        response.raise_for_status()\n",
+    "        filepath = os.path.join(folder_path, filename)\n",
+    "        if not os.path.exists(filepath):\n",
+    "            with open(filepath, 'wb') as f:\n",
+    "                f.write(response.content)\n",
+    "            logging.info(f\"Downloaded: {filename}\")\n",
+    "        else:\n",
+    "            logging.info(f\"File already exists: {filename}\")\n",
+    "    except requests.RequestException as e:\n",
+    "        logging.error(f\"Failed to download {filename}: {str(e)}\")\n",
+    "\n",
+    "# Usage example\n",
+    "url = \"https://d1io3yog0oux5.cloudfront.net/_c234fea25efbd8dee0f4efd475b3e96f/cocacolacompany/db/764/8126/file/KO+1Q24+Earnings+Audio.mp3\"\n",
+    "folder_path = os.path.join(\"data\", \"audio_files\")\n",
+    "filename = \"KO_1Q24_Earnings_Audio.mp3\"\n",
+    "\n",
+    "os.makedirs(folder_path, exist_ok=True)\n",
+    "download_mp3(url, folder_path, filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded: KO+2Q%2724+Earnings+Webcast+Audio.mp3\n",
+      "File already exists: KO+2Q%2724+Earnings+Webcast+Audio.mp3\n",
+      "Downloaded: KO+1Q24+Earnings+Audio.mp3\n",
+      "File already exists: KO+1Q24+Earnings+Audio.mp3\n",
+      "Downloaded: KO+4Q23+Earnings+Audio.mp3\n",
+      "File already exists: KO+4Q23+Earnings+Audio.mp3\n",
+      "Downloaded: KO-US_10242023_2916674.mp3\n",
+      "File already exists: KO-US_10242023_2916674.mp3\n",
+      "Downloaded: KO-US_07262023_2868085_16108464544.mp3\n",
+      "File already exists: KO-US_07262023_2868085_16108464544.mp3\n",
+      "Downloaded: KO-US_04242023_2811262.mp3\n",
+      "File already exists: KO-US_04242023_2811262.mp3\n",
+      "Downloaded: The+Coca-Cola+Company%27s+Fourth+Quarter+and+Full+Year+2022+Earnings+Call.mp3\n",
+      "File already exists: The+Coca-Cola+Company%27s+Fourth+Quarter+and+Full+Year+2022+Earnings+Call.mp3\n",
+      "Downloaded: KO-US_10252022_2724874.mp3\n",
+      "File already exists: KO-US_10252022_2724874.mp3\n",
+      "Downloaded: Final+Audio+-+Q2%272022+ER.mp3\n",
+      "File already exists: Final+Audio+-+Q2%272022+ER.mp3\n",
+      "Downloaded: KO-US_04252022_2638059.mp3\n",
+      "File already exists: KO-US_04252022_2638059.mp3\n",
+      "Downloaded: The+Coca-Cola+Company%27s+Fourth+Quarter+2021+Earnings+Call+-+ID+6819315.mp3\n",
+      "File already exists: The+Coca-Cola+Company%27s+Fourth+Quarter+2021+Earnings+Call+-+ID+6819315.mp3\n",
+      "Downloaded: KO-US_10272021_2567299.mp3\n",
+      "File already exists: KO-US_10272021_2567299.mp3\n",
+      "Downloaded: KO-US_07212021_2527551.mp3\n",
+      "File already exists: KO-US_07212021_2527551.mp3\n",
+      "Downloaded: Coca-Cola+Q1+2021+Earnings_04192021.mp3\n",
+      "File already exists: Coca-Cola+Q1+2021+Earnings_04192021.mp3\n",
+      "Downloaded: Coca-Cola_Q4+2020_02102021.mp3\n",
+      "File already exists: Coca-Cola_Q4+2020_02102021.mp3\n",
+      "Downloaded: Coca-Cola_Q3+2020_102220.mp3\n",
+      "File already exists: Coca-Cola_Q3+2020_102220.mp3\n",
+      "Downloaded: Audio+File_Q2.mp3\n",
+      "File already exists: Audio+File_Q2.mp3\n",
+      "Downloaded: KO-US_04212020_2372612_Final+Verssion.mp3\n",
+      "File already exists: KO-US_04212020_2372612_Final+Verssion.mp3\n",
+      "Downloaded: KO-US_01302020_2345024.mp3\n",
+      "File already exists: KO-US_01302020_2345024.mp3\n",
+      "Downloaded: coca-cola-q3-2019-earnings-call.mp3\n",
+      "File already exists: coca-cola-q3-2019-earnings-call.mp3\n",
+      "Downloaded: coca-cola-q2-2019-webcast-audio20190905-3408-eyvpj.mp3\n",
+      "File already exists: coca-cola-q2-2019-webcast-audio20190905-3408-eyvpj.mp3\n",
+      "Downloaded: coca-cola-q1-2019-earnings-call20190905-3408-ff2n4m.mp3\n",
+      "File already exists: coca-cola-q1-2019-earnings-call20190905-3408-ff2n4m.mp3\n",
+      "Downloaded: coca-cola-q4-201820190905-2783-1k1plsb.mp3\n",
+      "File already exists: coca-cola-q4-201820190905-2783-1k1plsb.mp3\n",
+      "Downloaded: coca-cola-q3-2018-earnings20190905-2783-toe4hr.mp3\n",
+      "File already exists: coca-cola-q3-2018-earnings20190905-2783-toe4hr.mp3\n",
+      "Downloaded: ko-us-02162018-202595420190905-2783-bezk59.mp3\n",
+      "File already exists: ko-us-02162018-202595420190905-2783-bezk59.mp3\n",
+      "Downloaded: ko-us-10252017-199241220190905-2783-dcsyls.mp3\n",
+      "File already exists: ko-us-10252017-199241220190905-2783-dcsyls.mp3\n",
+      "Downloaded: ko-us-07262017-196534320190905-494-1wj38q.mp3\n",
+      "File already exists: ko-us-07262017-196534320190905-494-1wj38q.mp3\n",
+      "Downloaded: ko-1q17-earnings-call-audio20190905-494-16f2scy.mp3\n",
+      "File already exists: ko-1q17-earnings-call-audio20190905-494-16f2scy.mp3\n",
+      "Downloaded: ko-4q16-earnings-call-audio-%281%2920190905-494-1rsvcrx.mp3\n",
+      "File already exists: ko-4q16-earnings-call-audio-%281%2920190905-494-1rsvcrx.mp3\n",
+      "Downloaded: ko-3q16-earnings-call-audio20190905-494-mjfia0.mp3\n",
+      "File already exists: ko-3q16-earnings-call-audio20190905-494-mjfia0.mp3\n",
+      "Downloaded: ko-us-07272016-185300520190905-494-zneedq.mp3\n",
+      "File already exists: ko-us-07272016-185300520190905-494-zneedq.mp3\n",
+      "Downloaded: KO-MP320190905-32021-1x3taed.mp3\n",
+      "File already exists: KO-MP320190905-32021-1x3taed.mp3\n",
+      "Downloaded: KO-US_02092016_180239220190905-32021-pghqy2.mp3\n",
+      "File already exists: KO-US_02092016_180239220190905-32021-pghqy2.mp3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import os\n",
+    "import re\n",
+    "\n",
+    "def download_mp3(url, folder_path, filename):\n",
+    "    try:\n",
+    "        headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'}\n",
+    "        response = requests.get(url, headers=headers, timeout=60)\n",
+    "        response.raise_for_status()\n",
+    "        filepath = os.path.join(folder_path, filename)\n",
+    "        if not os.path.exists(filepath):\n",
+    "            with open(filepath, 'wb') as f:\n",
+    "                f.write(response.content)\n",
+    "            print(f\"Downloaded: {filename}\")\n",
+    "        else:\n",
+    "            print(f\"File already exists: {filename}\")\n",
+    "    except requests.RequestException as e:\n",
+    "        print(f\"Failed to download {filename}: {str(e)}\")\n",
+    "\n",
+    "def scrape_and_download_mp3s():\n",
+    "    url = \"https://investors.coca-colacompany.com/filings-reports/resource-center\"\n",
+    "    headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'}\n",
+    "    \n",
+    "    response = requests.get(url, headers=headers)\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "    \n",
+    "    mp3_links = soup.find_all('a', href=re.compile(r'\\.mp3$'))\n",
+    "    \n",
+    "    folder_path = os.path.join(\"data\", \"coca_cola_earnings_audio\")\n",
+    "    os.makedirs(folder_path, exist_ok=True)\n",
+    "    \n",
+    "    for link in mp3_links:\n",
+    "        mp3_url = link['href']\n",
+    "        filename = mp3_url.split('/')[-1]\n",
+    "        download_mp3(mp3_url, folder_path, filename)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    scrape_and_download_mp3s()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
