updated document loader to crawl through subdirectories

--- a/notebooks/testing_functions.ipynb
+++ b/notebooks/testing_functions.ipynb
@@ -1225,17 +1225,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import logging\n",
+    "from langchain_community.document_loaders import TextLoader\n",
+    "from langchain_community.document_loaders.pdf import PyPDFDirectoryLoader\n",
+    "from PyPDF2.errors import PdfStreamError\n",
+    "\n",
+    "# Configure logging to display time, logging level, and message.\n",
+    "logging.basicConfig(\n",
+    "    level=logging.INFO,\n",
+    "    format='%(asctime)s - %(levelname)s - %(message)s'\n",
+    ")\n",
+    "\n",
+    "def load_documents(DATA_PATH):\n",
+    "    documents = []\n",
+    "    \n",
+    "    def process_directory(dir_path):\n",
+    "        nonlocal documents\n",
+    "        \n",
+    "        items = os.listdir(dir_path)\n",
+    "        subdirs = [d for d in items if os.path.isdir(os.path.join(dir_path, d))]\n",
+    "        pdf_files = [f for f in items if f.lower().endswith('.pdf')]\n",
+    "        txt_files = [f for f in items if f.lower().endswith('.txt')]\n",
+    "        \n",
+    "        if not items or (not pdf_files and not txt_files and not subdirs):\n",
+    "            logging.info(f\"No relevant files or subdirectories in {dir_path}, skipping...\")\n",
+    "            return\n",
+    "        \n",
+    "        if pdf_files:\n",
+    "            logging.info(f\"PDF files found in {dir_path}: {pdf_files}\")\n",
+    "            document_loader = PyPDFDirectoryLoader(dir_path)\n",
+    "            try:\n",
+    "                # Try to load the documents and append to the documents list\n",
+    "                loaded_docs = document_loader.load()\n",
+    "                documents.extend(loaded_docs)\n",
+    "                logging.info(f\"Successfully loaded {len(loaded_docs)} documents from PDFs in {dir_path}.\")\n",
+    "            except PdfStreamError as e:\n",
+    "                logging.error(f\"Error loading PDF in {dir_path}: {str(e)} - File might be corrupted.\")\n",
+    "            except Exception as e:\n",
+    "                # Catch any other exceptions that may occur during PDF loading\n",
+    "                logging.error(f\"Unexpected error loading PDFs in {dir_path}: {str(e)}\")\n",
+    "\n",
+    "        for txt_file in txt_files:\n",
+    "            try:\n",
+    "                loader = TextLoader(os.path.join(dir_path, txt_file))\n",
+    "                loaded_docs = loader.load()\n",
+    "                documents.extend(loaded_docs)\n",
+    "                logging.info(f\"Successfully loaded {len(loaded_docs)} documents from TXT file {txt_file}.\")\n",
+    "            except Exception as e:\n",
+    "                logging.error(f\"Error loading TXT file {txt_file} in {dir_path}: {str(e)}\")\n",
+    "\n",
+    "        for subdir in subdirs:\n",
+    "            process_directory(os.path.join(dir_path, subdir))\n",
+    "    \n",
+    "    process_directory(DATA_PATH)\n",
+    "    logging.info(f\"Total documents loaded: {len(documents)}\")\n",
+    "    return documents\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No relevant files or subdirectories in ../data\\audio\\coca_cola_earnings_audio, skipping...\n",
+      "PDF files found in ../data\\financial_reports_2024_08_06\\Automotive\\Tesla: ['TSLA-Q1-2024-Update.pdf', 'TSLA-Q2-2023-Update.pdf', 'TSLA-Q2-2024-Update.pdf', 'TSLA-Q3-2023-Update-3.pdf', 'TSLA-Q4-2023-Update.pdf']\n",
+      "Successfully loaded 145 documents from PDFs in ../data\\financial_reports_2024_08_06\\Automotive\\Tesla.\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Communication Services\\Meta Platforms, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Consumer Discretionary\\Amazon, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Consumer Goods\\Coca-Cola, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Consumer Staples\\Coca-Cola, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Consumer Staples\\PepsiCo, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Consumer Staples\\Procter & Gamble, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Energy\\Chevron, skipping...\n",
+      "PDF files found in ../data\\financial_reports_2024_08_06\\Energy\\ExxonMobil: ['2023_FAFRs_final.pdf', '2023_Financial_and_Operating_Data_-_Final.pdf', '2023_Frequently_Used_Terms_-_Final.pdf', '2Q24+cautionary+statement.pdf', '2Q24+Earnings+Call+Transcript_FINAL.pdf', '2Q24+Earnings+Preliminary+Prepared+Remarks.pdf', '2Q24+Earnings+Press+Release+Website.pdf', '2Q24+Earnings+Slides_Final.pdf', '2Q24+Supplement+Website.pdf', 'frequently-used-terms.pdf', 'XOM_Investment_Thesis.pdf']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-08-07 20:49:04,004 - WARNING - Ignoring wrong pointing object 7 0 (offset 0)\n",
+      "2024-08-07 20:49:04,005 - WARNING - Ignoring wrong pointing object 9 0 (offset 0)\n",
+      "2024-08-07 20:49:04,007 - WARNING - Ignoring wrong pointing object 13 0 (offset 0)\n",
+      "2024-08-07 20:49:04,008 - WARNING - Ignoring wrong pointing object 19 0 (offset 0)\n",
+      "2024-08-07 20:49:04,009 - WARNING - Ignoring wrong pointing object 30 0 (offset 0)\n",
+      "2024-08-07 20:49:04,040 - WARNING - invalid pdf header: b'\\n\\n<!D'\n",
+      "2024-08-07 20:49:04,102 - WARNING - EOF marker not found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully loaded 199 documents from PDFs in ../data\\financial_reports_2024_08_06\\Energy\\ExxonMobil.\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Finance\\Berkshire Hathaway, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Finance\\JPMorgan Chase, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Financials\\Berkshire Hathaway, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Financials\\Visa, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Healthcare\\AbbVie, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Healthcare\\Johnson & Johnson, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Healthcare\\Pfizer, skipping...\n",
+      "PDF files found in ../data\\financial_reports_2024_08_06\\Healthcare\\UnitedHealth Group: ['2020_SustainabilityReport.pdf', '2021-sustainability-report.pdf', '2022-sustainability-report.pdf', '2023-UHG-Sustainability-Report.pdf', '2024_proxy_statement_final.pdf', 'UNH-2023Q3_10-Q-FINAL.pdf', 'UNH-Form-10-K.pdf', 'UNH-Proxy-Statement-2021.pdf', 'UNH-Proxy-Statement-2022.pdf', 'UNH-Proxy-Statement-2023.pdf', 'UNH-Q1-2020-Form-10-Q.pdf', 'UNH-Q1-2020-Release.pdf', 'UNH-Q1-2021-Form-10-Q.pdf', 'UNH-Q1-2021-Form-8-K.pdf', 'UNH-Q1-2021-Release.pdf', 'UNH-Q1-2022-Form-10-Q.pdf', 'UNH-Q1-2022-Form-8-K.pdf', 'UNH-Q1-2022-Release.pdf', 'UNH-Q1-2023-Form-8K.pdf', 'UNH-Q1-2023-Release.pdf', 'UNH-Q1-2024-Form-8K.pdf', 'UNH-Q1-2024-Release.pdf', 'UNH-Q2-2020-Form-10-Q.pdf', 'UNH-Q2-2020-Form-8-K.pdf', 'UNH-Q2-2020-Release.pdf', 'UNH-Q2-2021-Form-10-Q.pdf', 'UNH-Q2-2021-Form-8-K.pdf', 'UNH-Q2-2021-Release.pdf', 'UNH-Q2-2022-Form-10-Q.pdf', 'UNH-Q2-2022-Release.pdf', 'UNH-Q2-2023-form-10-Q.pdf', 'UNH-Q2-2023-Form-8K.pdf', 'UNH-Q2-2023-Release.pdf', 'UNH-Q2-2024-Release.pdf', 'UNH-Q2-2024-Remarks.pdf', 'UNH-Q2-Form-8K.pdf', 'UNH-Q3-2020-Form-10-Q.pdf', 'UNH-Q3-2020-Form-8-K.pdf', 'UNH-Q3-2020-Release.pdf', 'UNH-Q3-2021-Form-10-Q.pdf', 'UNH-Q3-2021-Form-8-K.pdf', 'UNH-Q3-2021-Release.pdf', 'UNH-Q3-2022-Form-10-Q.pdf', 'UNH-Q3-2022-Form-8-K.pdf', 'UNH-Q3-2022-Release.pdf', 'UNH-Q3-2023-Form-8K.pdf', 'UNH-Q3-2023-Release.pdf', 'UNH-Q4-2020-Form-8-K.pdf', 'UNH-Q4-2020-Form-8K.pdf', 'UNH-Q4-2020-Release.pdf', 'UNH-Q4-2021-Form-10-K.pdf', 'UNH-Q4-2021-Form-8-K.pdf', 'UNH-Q4-2021-Release.pdf', 'UNH-Q4-2022-Form-10-K.pdf', 'UNH-Q4-2022-Form-8-K.pdf', 'UNH-Q4-2022-Release.pdf', 'UNH-Q4-2023-Form-10-K.pdf', 'UNH-Q4-2023-Form-8K.pdf', 'UNH-Q4-2023-Release.pdf', 'UNH-Response-to-ISS-Say-on-Pay-Recommendation.pdf', 'UNH_Q1-2023_Form-10-Q.pdf', 'UNH_Q1-2024_Form-10-Q.pdf']\n",
+      "Unexpected error loading PDFs in ../data\\financial_reports_2024_08_06\\Healthcare\\UnitedHealth Group: Stream has ended unexpectedly\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Retail\\Walmart, skipping...\n",
+      "PDF files found in ../data\\financial_reports_2024_08_06\\Technology\\Alphabet: ['20230426-alphabet-10q.pdf', '2023q2-alphabet-earnings-release.pdf', '2023q3-alphabet-earnings-release.pdf', '2023q4-alphabet-earnings-release.pdf', '2024q1-alphabet-earnings-release-pdf.pdf', '2024q2-alphabet-earnings-release.pdf', 'goog-10-k-2023.pdf', 'goog-10-q-q1-2024.pdf', 'goog-10-q-q2-2023-4.pdf', 'goog-10-q-q2-2024.pdf', 'goog-10-q-q3-2023.pdf', 'goog-exhibit-99-1-2-8-24.pdf', 'goog-exhibit-99-1-q1-2023-19.pdf', 'goog023-alphabet-2023-annual-report-web-1.pdf']\n",
+      "Successfully loaded 523 documents from PDFs in ../data\\financial_reports_2024_08_06\\Technology\\Alphabet.\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Technology\\Apple, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Technology\\Microsoft, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_06\\Technology\\NVIDIA, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_07\\Automotive\\Tesla, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_07\\Consumer Goods\\Coca-Cola, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_07\\Consumer Goods\\PepsiCo, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_07\\Consumer Goods\\Procter & Gamble, skipping...\n",
+      "No relevant files or subdirectories in ../data\\financial_reports_2024_08_07\\Energy\\ExxonMobil, skipping...\n",
+      "PDF files found in ../data\\financial_reports_2024_08_07\\Finance\\Berkshire Hathaway: ['1stqtr11.pdf', '1stqtr12.pdf', '1stqtr13.pdf', '1stqtr14.pdf', '1stqtr15.pdf', '1stqtr16.pdf', '1stqtr17.pdf', '1stqtr18.pdf', '1stqtr19.pdf', '1stqtr20.pdf', '1stqtr21.pdf', '1stqtr22.pdf', '1stqtr23.pdf', '1stqtr24.pdf', '2011ar.pdf', '2012ar.pdf', '2013ar.pdf', '2014ar.pdf', '2015ar.pdf', '2016ar.pdf', '2017ar.pdf', '2018ar.pdf', '2019ar.pdf', '2020ar.pdf', '2021ar.pdf', '2022ar.pdf', '2023ar.pdf', '2ndqtr11.pdf', '2ndqtr12.pdf', '2ndqtr13.pdf', '2ndqtr14.pdf', '2ndqtr15.pdf', '2ndqtr16.pdf', '2ndqtr17.pdf', '2ndqtr18.pdf', '2ndqtr19.pdf', '2ndqtr20.pdf', '2ndqtr21.pdf', '2ndqtr22.pdf', '2ndqtr23.pdf', '2ndqtr24.pdf', '3rdqtr11.pdf', '3rdqtr12.pdf', '3rdqtr13.pdf', '3rdqtr14.pdf', '3rdqtr15.pdf', '3rdqtr16.pdf', '3rdqtr17.pdf', '3rdqtr18.pdf', '3rdqtr19.pdf', '3rdqtr20.pdf', '3rdqtr21.pdf', '3rdqtr22.pdf', '3rdqtr23.pdf']\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_documents(\"../data\")"
+   ]
   },
   {
    "cell_type": "code",
